--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
 }
+
 h1 {
     text-align: center;
     font-size: 45px;
@@ -10,7 +11,6 @@ h1 {
 #staryNight {
     margin-left: 40px;
     width: 520px;
-
 }
 
 #nightSky {
@@ -22,7 +22,6 @@ h1 {
 #headerStaryNight {
     text-align: center;
     margin-bottom: 20px;
-
 }
 
 #paragraphStaryNight {
@@ -33,6 +32,7 @@ h1 {
 #listNightSky {
     color: blue;
     margin-bottom: 20px;
+    padding-left: 15px;
 }
 
 #buttonNightSky {
@@ -81,49 +81,43 @@ h1 {
 
 #magicList {
     text-align: left;
-    list-style-type: none;
     margin-top: 20px;
 }
 
 #listAndHeader {
     background-color: #FFDEF0;
-    border: 4px purple solid;
-    height: 130px;
+    border: 4px #C11574 solid;
+    height: 150px;
     margin-bottom: 20px;
 }
 
 #whereWeSeeIt {
     padding-left: 10px;
+    padding-top: 9px;
+    font-size: 22px;
+    color: #414651;
 }
 
+#magicalAnimals {
+    padding: 13px;
+}
 
-#li1, #li2, #li3 {
+#fireflies, #fish, #fungi {
     list-style-type: none;
     color: #C27512;
-    padding-bottom: -5px;
-    padding-top: -10px;
 }
 
-#deepSea {
-    font-size: 30px;
-}
-
-#imgCircle1, #imgCircle2, #imgCircle3 {
-    display: inline;
+#imgCircleOne, #imgCircleTwo, #imgCircleThree{
     padding-right: 10px;
     padding-bottom: -10px;
     padding-top: 10px;
-    padding-left: -7px;
-}
-
-#fish {
-    margin-bottom: 40px;
-    margin-right: 40px;
+    padding-left: -20px;
 }
 
 a {
-    text-align: right;
-    position: relative;
-    margin-left: 100px;
     color: cyan;
+}
+
+#lastAnchor {
+    text-align: right;
 }
